@@ -208,13 +208,13 @@ public class DataVectorizer {
       if (sortClause == null || sortClause.sortExpressions().isEmpty())
         return Uni.createFrom().item(true);
       if (sortClause.hasVectorizeSearchClause()) {
-        final List<SortExpression> sortExpressions = sortClause.sortExpressions();
-        SortExpression expression = sortExpressions.get(0);
-        String text = expression.vectorize();
         if (embeddingProvider == null) {
           throw ErrorCodeV1.EMBEDDING_SERVICE_NOT_CONFIGURED.toApiException(
               schemaObject.name().table());
         }
+        final List<SortExpression> sortExpressions = sortClause.sortExpressions();
+        SortExpression expression = sortExpressions.getFirst();
+        String text = expression.getVectorize();
         Uni<List<float[]>> vectors =
             embeddingProvider
                 .vectorize(
@@ -227,7 +227,7 @@ public class DataVectorizer {
             .onItem()
             .transform(
                 vectorData -> {
-                  float[] vector = vectorData.get(0);
+                  float[] vector = vectorData.getFirst();
                   final VectorConfig vectorConfig = schemaObject.vectorConfig();
                   // This will be the first element for collection
                   // TODO: AARON - this code had no null projection, now throws if not present
@@ -241,8 +241,10 @@ public class DataVectorizer {
                         collectionVectorDefinition.vectorSize(),
                         vector.length);
                   }
+                  // 12-Jun-2025, tatu: Important! Due to original bad design, we need to allow
+                  //   replacing of vectorize sort with resolved vector sort:
                   sortExpressions.clear();
-                  sortExpressions.add(SortExpression.vsearch(vector));
+                  sortExpressions.add(SortExpression.collectionVectorSort(vector));
                   return true;
                 });
       }
@@ -406,7 +408,7 @@ public class DataVectorizer {
 
     @Override
     public String getVectorizeText() {
-      return sortExpression.vectorize();
+      return sortExpression.getVectorize();
     }
 
     @Override
@@ -417,7 +419,7 @@ public class DataVectorizer {
       var i = sortClause.sortExpressions().indexOf(sortExpression);
       sortClause
           .sortExpressions()
-          .set(i, SortExpression.tableVectorSort(sortExpression.path(), vector));
+          .set(i, SortExpression.tableVectorSort(sortExpression.getPath(), vector));
     }
   }
 
